// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addon.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-addon t-addon--prepend"
    >
      <span
        class="t-addon__prepend"
      >
        http://
      </span>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="请输入域名"
          value=""
        />
      </div>
    </div>
    <div
      class="t-addon t-addon--prepend t-addon--append"
    >
      <span
        class="t-addon__prepend"
      >
        http://
      </span>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="请输入域名"
          value=""
        />
      </div>
      <span
        class="t-addon__append"
      >
        .com
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`clearable.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-input--suffix"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value="Hello TDesign"
      />
      <span
        class="t-input__suffix"
      >
        <svg
          class="t-icon t-icon-clear-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM647.7644992 330.98066432L511.97266432 466.72466432 376.23549824 330.98066432 330.98066432 376.23549824 466.72466432 511.97266432 330.98066432 647.7644992 376.23549824 693.0193344 511.97266432 557.22066432 647.7644992 693.0193344 693.0193344 647.7644992 557.22066432 511.97266432 693.0193344 376.23549824 647.7644992 330.98066432Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-is-disabled"
    >
      <input
        class="t-input__inner"
        disabled=""
        value="禁用状态"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`focus.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input-group"
    >
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="姓"
          value=""
        />
      </div>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="名"
          value=""
        />
      </div>
    </div>
    <div
      class="t-input-group t-input-group--seperate"
    >
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="姓"
          value=""
        />
      </div>
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
          placeholder="名"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`password.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix"
      >
        <svg
          class="t-icon t-icon-lock-on"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 192C444.5208448 192 389.23743232 244.21617856 384.35108736 310.44721024L384 320 320 320C320 213.961328 405.961328 128 512 128 614.25157632 128 697.8342976 207.93087744 703.6740672 308.71854144L704 320 782.7692288 320C809.9586368 320 832 352.74717248 832 393.14285696L832 758.8571456C832 799.2528256 809.9586368 832 782.7692288 832L241.23076928 832C214.0413664 832 192 799.2528256 192 758.8571456L192 393.14285696C192 352.74717248 214.0413664 320 241.23076928 320L640 320C640 249.307552 582.692448 192 512 192ZM768 384L256 384 256 768 768 768 768 384ZM544.70655104 511.92788736L544.70655104 703.9278848 480.70655104 703.9278848 480.70655104 511.92788736 544.70655104 511.92788736Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="password"
        value=""
      />
      <span
        class="t-input__suffix"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix"
      >
        <svg
          class="t-icon t-icon-lock-on"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 192C444.5208448 192 389.23743232 244.21617856 384.35108736 310.44721024L384 320 320 320C320 213.961328 405.961328 128 512 128 614.25157632 128 697.8342976 207.93087744 703.6740672 308.71854144L704 320 782.7692288 320C809.9586368 320 832 352.74717248 832 393.14285696L832 758.8571456C832 799.2528256 809.9586368 832 782.7692288 832L241.23076928 832C214.0413664 832 192 799.2528256 192 758.8571456L192 393.14285696C192 352.74717248 214.0413664 320 241.23076928 320L640 320C640 249.307552 582.692448 192 512 192ZM768 384L256 384 256 768 768 768 768 384ZM544.70655104 511.92788736L544.70655104 703.9278848 480.70655104 703.9278848 480.70655104 511.92788736 544.70655104 511.92788736Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="password"
        value=""
      />
      <span
        class="t-input__suffix"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-size-l"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-is-success"
    >
      <input
        class="t-input__inner"
        placeholder="成功状态"
        value=""
      />
    </div>
    <div
      class="t-input t-is-warning"
    >
      <input
        class="t-input__inner"
        placeholder="警告状态"
        value=""
      />
    </div>
    <div
      class="t-input t-is-error"
    >
      <input
        class="t-input__inner"
        placeholder="错误状态"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`textarea.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item--input__input-box"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix"
      >
        <svg
          class="t-icon t-icon-search"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 128C575.05800768 128 704 256.94199232 704 416 704 495.52900416 671.7644992 567.52900416 619.64675328 619.64675328L858.5096704 858.5096704 813.2548352 903.7644992 569.33373568 659.8328576C524.93400192 687.812288 472.35742272 704 416 704 256.94199232 704 128 575.05800768 128 416 128 256.94199232 256.94199232 128 416 128ZM416 192C292.28821632 192 192 292.28821632 192 416 192 539.71178368 292.28821632 640 416 640 539.71178368 640 640 539.71178368 640 416 640 292.28821632 539.71178368 192 416 192Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        value=""
      />
      <span
        class="t-input__suffix"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
